# FO-prover

./: Cargo.toml  FO-prover.hs  Formula.hs  Makefile  Parser.hs  run_tests.sh
src/: cnf.rs  formula.rs  grammar.bnf  main.rs  nnf.rs  parser.rs  proposition.rs  sat_solver.rs
src/first_order/: decider.rs  formula.rs  herbrand.rs  mod.rs  nnf.rs  parser.rs  pnf.rs
src/propositional/: cnf.rs  mod.rs  nnf.rs  proposition.rs  sat_solver.rs
tests/A/: t58.txt  t62.txt  t73.txt  t74.txt  t75.txt  t76.txt
