[package]
name = "prover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {version = "1.0.71", features = ["backtrace"]}
bnf = "0.5.0"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"